--- a/AppBolivar/Src/Caja.fx.yaml
+++ b/AppBolivar/Src/Caja.fx.yaml
@@ -2190,7 +2190,7 @@ Caja As screen:
                     });
                     
                     If(CountRows(Adjunto_5.Attachments)=0,false,
-                     Set(varAzureFileCaja,AzureBlobStorage.CreateFile("images",GUID() & Last(Adjunto_5.Attachments).Name,Last(Adjunto_5.Attachments).Value)));
+                     Set(varAzureFileCaja,AzureBlobStorageNew.CreateFile("images",GUID() & Last(Adjunto_5.Attachments).Name,Last(Adjunto_5.Attachments).Value)));
                     
                     Set(varPago_Patch,Patch('public.Medical_Center_Pagos',LookUp('public.Medical_Center_Pagos',id_ticket=CajaSelected.id_Ticket),
                     {
@@ -2241,7 +2241,7 @@ Caja As screen:
                     ;
                     
                     If(CountRows(Adjunto_5.Attachments)=0,false,
-                     Set(varAzureFileCaja,AzureBlobStorage.CreateFile("images",GUID() & Last(Adjunto_5.Attachments).Name,Last(Adjunto_5.Attachments).Value)));
+                     Set(varAzureFileCaja,AzureBlobStorageNew.CreateFile("images",GUID() & Last(Adjunto_5.Attachments).Name,Last(Adjunto_5.Attachments).Value)));
                     
                     Set(varPago_Patch,Patch('public.Medical_Center_Pagos',Defaults('public.Medical_Center_Pagos'),
                     {
