--- a/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
@@ -77,7 +77,7 @@
                     ) = "Masculino",
                     hombre,
                     mujer
-                ), IfError( AzureBlobStorage.GetFileContent(ImagenID_HistoriaMedico.Text), SampleImage)
+                ), IfError( AzureBlobStorageNew.GetFileContent(ImagenID_HistoriaMedico.Text), SampleImage)
             )
         RadiusBottomLeft: =8
         RadiusBottomRight: =8
@@ -971,7 +971,7 @@
                     Image: |-
                         =If(
                             IsBlank(ThisItem.id_Image),
-                            SampleImage, IfError( AzureBlobStorage.GetFileContent(ThisItem.id_Image), SampleImage)
+                            SampleImage, IfError( AzureBlobStorageNew.GetFileContent(ThisItem.id_Image), SampleImage)
                         )
                     OnSelect: =Select(Parent)
                     Width: =60
@@ -3807,7 +3807,7 @@
         Image: |-
             =If(
                 IsBlank(EvidenciasGallery_3.Selected.id_Image),
-                SampleImage, IfError( AzureBlobStorage.GetFileContent(EvidenciasGallery_3.Selected.id_Image),  SampleImage)
+                SampleImage, IfError( AzureBlobStorageNew.GetFileContent(EvidenciasGallery_3.Selected.id_Image),  SampleImage)
             )
         RadiusBottomLeft: =8
         RadiusBottomRight: =8
@@ -4890,7 +4890,7 @@
                 false,
                 Set(
                     varAzureFileUsuarioNewPacienteImage,
-                    AzureBlobStorage.CreateFile(
+                    AzureBlobStorageNew.CreateFile(
                         "images",
                         GUID() & Last(Adjunto_16.Attachments).Name,
                         Last(Adjunto_16.Attachments).Value
@@ -6678,7 +6678,7 @@
                                 Imagen_Id
                             )
                         ),
-                        SampleImage, IfError(AzureBlobStorage.GetFileContent(
+                        SampleImage, IfError(AzureBlobStorageNew.GetFileContent(
                             LookUp(
                                 'public.Medical_Center_Historial_Principal',
                                 DNI_CI = TicketSelected.DNI_Paciente,
@@ -10975,7 +10975,7 @@
                             )
                         ),
                         SampleImage,IfError(
-                        AzureBlobStorage.GetFileContent(
+                        AzureBlobStorageNew.GetFileContent(
                             LookUp(
                                 'public.Medical_Center_Usuario',
                                 Correo = User().Email,
@@ -11826,7 +11826,7 @@
                         )
                     ),
                     SampleImage,IfError(
-                    AzureBlobStorage.GetFileContent(
+                    AzureBlobStorageNew.GetFileContent(
                         LookUp(
                             'public.Medical_Center_Usuario',
                             Correo = User().Email,
@@ -12705,7 +12705,7 @@
             HoverFill: =RGBA(44, 97, 112, 1)
             OnSelect: |-
                 =If(CountRows(Adjunto_18.Attachments)=0,false,
-                 Set(varAzureFileTest,AzureBlobStorage.CreateFile("images",GUID() & Last(Adjunto_18.Attachments).Name,Last(Adjunto_18.Attachments).Value)));
+                 Set(varAzureFileTest,AzureBlobStorageNew.CreateFile("images",GUID() & Last(Adjunto_18.Attachments).Name,Last(Adjunto_18.Attachments).Value)));
                 
                 Patch('public.Medical_Center_Test_Paciente',Defaults('public.Medical_Center_Test_Paciente'),
                 {id:First(SortByColumns('public.Medical_Center_Test_Paciente',"id",SortOrder.Descending)).id +1,
@@ -13680,7 +13680,7 @@
                         )
                     ),
                     SampleImage,IfError(
-                    AzureBlobStorage.GetFileContent(
+                    AzureBlobStorageNew.GetFileContent(
                         LookUp(
                             'public.Medical_Center_Usuario',
                             Correo = User().Email,
@@ -14045,7 +14045,7 @@
                         IsBlank(ThisItem.id_Image),
                         SampleImage,
                         IfError(
-                            AzureBlobStorage.GetFileContent(ThisItem.id_Image),
+                            AzureBlobStorageNew.GetFileContent(ThisItem.id_Image),
                             SampleImage
                         )
                     )
@@ -14118,7 +14118,7 @@
                         )
                     ),
                     SampleImage,IfError(
-                    AzureBlobStorage.GetFileContent(
+                    AzureBlobStorageNew.GetFileContent(
                         LookUp(
                             'public.Medical_Center_Usuario',
                             Correo = User().Email,
@@ -15478,7 +15478,7 @@
             HoverFill: =RGBA(255, 255, 255, 1)
             OnSelect: |-
                 =If(CountRows(DataCardValue5_3.Attachments)>0,
-                  Set(varAzureFileEvidencia,AzureBlobStorage.CreateFile("images",GUID() & Last(DataCardValue5_3.Attachments).Name,Last(DataCardValue5_3.Attachments).Value));
+                  Set(varAzureFileEvidencia,AzureBlobStorageNew.CreateFile("images",GUID() & Last(DataCardValue5_3.Attachments).Name,Last(DataCardValue5_3.Attachments).Value));
                 Collect(CollectRecepcionEvidencia,{
                     FN:Last(DataCardValue5_3.Attachments).Name, FL:"https://blobauroranuevo.blob.core.windows.net/" & varAzureFileEvidencia.Path,FID:varAzureFileEvidencia.Id,Ftype:varAzureFileEvidencia.MediaType
                 }),If(CountRows(DataCardValue5_3.Attachments)=0,false));
