--- a/AppBolivar/Src/scHistoriaMedicaPediatria.fx.yaml
+++ b/AppBolivar/Src/scHistoriaMedicaPediatria.fx.yaml
@@ -173,7 +173,7 @@ scHistoriaMedicaPediatria As screen:
                             
                             UpdateContext({_ViewFormularioDCA:false});
                             If(CountRows(Adjunto_14.Attachments)=0,false,
-                             Set(varAzureFileUsuarioNewHM,AzureBlobStorageNew.CreateFile("images",GUID() & Last(Adjunto_14.Attachments).Name,Last(Adjunto_14.Attachments).Value)));
+                             Set(varAzureFileUsuarioNewHM,AzureBlobStorage.CreateFile("images",GUID() & Last(Adjunto_14.Attachments).Name,Last(Adjunto_14.Attachments).Value)));
                             
                             
                             Patch(
