--- a/AppBolivar/Src/scHistoriaMedicaOftalmologia.fx.yaml
+++ b/AppBolivar/Src/scHistoriaMedicaOftalmologia.fx.yaml
@@ -3108,7 +3108,7 @@ scHistoriaMedicaOftalmologia As screen:
                         
                         UpdateContext({_ViewFormularioDCA:false});
                         If(CountRows(Adjunto_14.Attachments)=0,false,
-                         Set(varAzureFileUsuarioNewHM,AzureBlobStorageNew.CreateFile("images",GUID() & Last(Adjunto_14.Attachments).Name,Last(Adjunto_14.Attachments).Value)));
+                         Set(varAzureFileUsuarioNewHM,AzureBlobStorage.CreateFile("images",GUID() & Last(Adjunto_14.Attachments).Name,Last(Adjunto_14.Attachments).Value)));
                         
                         
                         Patch(
